5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1729_2527.log
== TEST (2019-05-13 19:05:42) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + 1
 j = j - 1
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:06:57) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

if(dd = i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- ERROR:
File "XXXX", line 11
    if(dd = i):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:07:02) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
IMPERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:07:10) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
IMPERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:07:52) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1
print(dd)
if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
992
IMPERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:08:38) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1


print(dd)
if(dd == i*2):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- EXECUTION TIME:
0.193917
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
496
992
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
8128
16256
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
20
42
IMPERFEITO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:08:40) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1


print(dd)
if(dd == i*2):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
992
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:09:06) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

dd = dd-i
print(dd)
if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:09:11) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

dd = dd-i
print(dd)
if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- EXECUTION TIME:
0.128972
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
496
496
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
8128
8128
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
20
22
IMPERFEITO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:09:16) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

dd = dd-i
print(dd)
if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:10:05) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

dd = dd-i

if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- EXECUTION TIME:
0.186021
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
496
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
8128
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
20
IMPERFEITO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:10:11) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 0):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

dd = dd-i
if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
496
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:11:26) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 1):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1

dd = dd-i

if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
IMPERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:11:44) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 1):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1


if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:11:49) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 1):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1


if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- EXECUTION TIME:
0.136739
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
IMPERFEITO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:12:08) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 1):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1
if(dd == i):
	print("PERFEITO")
else:
	print("IMPERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:12:42) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 1):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1
if(dd == i):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- OUTPUT:
1
2
4
8
16
31
62
124
248
PERFEITO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:12:47) 
-- CODE:
i=int(input())
j=i
dd = 0
while(j != 1):
 d = int(i/j)
 if( (i%j) == 0):
		 print(d)
		 dd = dd + d
 j = j - 1
if(dd == i):
	print("PERFEITO")
else:
	print("NAO PERFEITO")
-- EXECUTION TIME:
0.167747
-- TEST CASE 1:
---- input:
496
---- correct output:
1
2
4
8
16
31
62
124
248
PERFEITO
---- user output:
1
2
4
8
16
31
62
124
248
PERFEITO
-- TEST CASE 2:
---- input:
8128
---- correct output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
---- user output:
1
2
4
8
16
32
64
127
254
508
1016
2032
4064
PERFEITO
-- TEST CASE 3:
---- input:
20
---- correct output:
1
2
4
5
10
NAO PERFEITO
---- user output:
1
2
4
5
10
NAO PERFEITO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
